%% Story identity
erDiagram
  Character {
    string id PK
  }
  WitnessDef {
    string id PK
  }
  Witness {
    string id PK
  }
  Architect {
    string id PK
  }
  LegendaryReward {
    string id PK
  }
  PuzzleBlueprint {
    string id PK
  }
  Character ||--o| Architect : "relates to"
  Character ||--o| Witness : "relates to"
  Architect ||--o{ Witness : "relates to"
  WitnessDef ||--o{ Witness : "relates to"
  Witness ||--o| LegendaryReward : "relates to"
